--- a/Projects/Makefile,fe1
+++ b/Projects/Makefile,fe1
@@ -33,27 +33,17 @@ Squeezeflags = -o $@
 
 
 # Dynamic dependencies:
-o.Utils: s.Utils
-o.Utils: AsmHdrs.h.SWINames
-o.Utils: s.Utils
-o.Utils: AsmHdrs.h.SWINames
+o.Math3D:	c.Math3D
+o.Math3D:	h.Math3D
 o.Mesh:	c.Mesh
 o.Mesh:	h.Mesh
 o.Mesh:	h.Math3D
 o.Mesh:	h.CVector
 o.Mesh:	h.CVector
-o.Math3D:	c.Math3D
-o.Math3D:	h.Math3D
-o.Math3D:	c.Math3D
-o.Math3D:	h.Math3D
-o.Main:	c.Main
-o.Main:	C:h.kernel
-o.Main:	C:h.swis
-o.Main:	h.Math3D
-o.Main:	h.Mesh
-o.Main:	h.Math3D
-o.Main:	h.CVector
-o.Main:	h.CVector
+o.Utils: s.Utils
+o.Utils: h.SWINames
+o.Utils: s.Utils
+o.Utils: h.SWINames
 o.Main:	c.Main
 o.Main:	C:h.kernel
 o.Main:	C:h.swis
