--- a/Projects/Makefile,fe1
+++ b/Projects/Makefile,fe1
@@ -1,8 +1,8 @@
-# Project:   MeshRenderer
+# Project:   Projects
 
 
 # Toolflags:
-CCflags = -c -depend !Depend -IC: -throwback 
+CCflags = -c -depend !Depend -IC: -throwback
 C++flags = -c -depend !Depend -IC: -throwback
 Linkflags = -aif -c++ -o $@
 ObjAsmflags = -throwback -NoCache -depend !Depend
@@ -12,10 +12,10 @@ Squeezeflags = -o $@
 
 
 # Final targets:
-@.!MeshRenderer:   @.o.Utils @.o.Main @.^.AcornC_C++.Libraries.clib.o.stubs \
-        @.o.Math3D @.o.Mesh @.^.AcornC_C++.Libraries.clib.o.ansilib 
-        Link $(Linkflags) @.o.Utils @.o.Main \
-        @.^.AcornC_C++.Libraries.clib.o.stubs @.o.Math3D @.o.Mesh @.^.AcornC_C++.Libraries.clib.o.ansilib 
+@.!MeshRenderer:   @.o.Main @.o.Math3D @.o.Mesh @.o.Utils \
+        @.^.AcornC_C++.Libraries.clib.o.ansilib @.^.AcornC_C++.Libraries.clib.o.stubs 
+        Link $(Linkflags) @.o.Main @.o.Math3D @.o.Mesh @.o.Utils \
+        @.^.AcornC_C++.Libraries.clib.o.ansilib @.^.AcornC_C++.Libraries.clib.o.stubs 
 
 
 # User-editable dependencies:
@@ -24,26 +24,27 @@ Squeezeflags = -o $@
 # Static dependencies:
 @.o.Main:   @.c.Main
         cc $(ccflags) -o @.o.Main @.c.Main 
-@.o.Utils:   @.s.Utils
-        objasm $(objasmflags) -from @.s.Utils -to @.o.Utils
 @.o.Math3D:   @.c.Math3D
         cc $(ccflags) -o @.o.Math3D @.c.Math3D 
 @.o.Mesh:   @.c.Mesh
         cc $(ccflags) -o @.o.Mesh @.c.Mesh 
+@.o.Utils:   @.s.Utils
+        objasm $(objasmflags) -from @.s.Utils -to @.o.Utils
 
 
 # Dynamic dependencies:
-o.Math3D:	c.Math3D
-o.Math3D:	h.Math3D
-o.Mesh:	c.Mesh
-o.Mesh:	h.Mesh
-o.Mesh:	h.Math3D
-o.Mesh:	h.CVector
-o.Mesh:	h.CVector
 o.Utils: s.Utils
 o.Utils: h.SWINames
 o.Utils: s.Utils
 o.Utils: h.SWINames
+o.Main:	c.Main
+o.Main:	C:h.kernel
+o.Main:	C:h.swis
+o.Main:	h.Math3D
+o.Main:	h.Mesh
+o.Main:	h.Math3D
+o.Main:	h.CVector
+o.Main:	h.CVector
 o.Main:	c.Main
 o.Main:	C:h.kernel
 o.Main:	C:h.swis
