--- a/Projects/Makefile,fe1
+++ b/Projects/Makefile,fe1
@@ -13,9 +13,9 @@ Squeezeflags = -o $@
 
 # Final targets:
 @.!MeshRenderer:   @.o.Utils @.o.Main @.^.AcornC_C++.Libraries.clib.o.stubs \
-        @.o.Math3D @.o.Mesh @.^.AcornC_C++.Libraries.clib.o.ansilib 
+        @.o.Math3D @.o.Mesh @.^.AcornC_C++.Libraries.clib.o.ansilib @.o.Palette 
         Link $(Linkflags) @.o.Utils @.o.Main \
-        @.^.AcornC_C++.Libraries.clib.o.stubs @.o.Math3D @.o.Mesh @.^.AcornC_C++.Libraries.clib.o.ansilib 
+        @.^.AcornC_C++.Libraries.clib.o.stubs @.o.Math3D @.o.Mesh @.^.AcornC_C++.Libraries.clib.o.ansilib @.o.Palette 
 
 
 # User-editable dependencies:
@@ -30,9 +30,15 @@ Squeezeflags = -o $@
         cc $(ccflags) -o @.o.Math3D @.c.Math3D 
 @.o.Mesh:   @.c.Mesh
         cc $(ccflags) -o @.o.Mesh @.c.Mesh 
+@.o.Palette:   @.c.Palette
+        cc $(ccflags) -o @.o.Palette @.c.Palette 
 
 
 # Dynamic dependencies:
+o.Utils: s.Utils
+o.Utils: h.SWINames
+o.Utils: s.Utils
+o.Utils: h.SWINames
 o.Math3D:	c.Math3D
 o.Math3D:	h.Math3D
 o.Mesh:	c.Mesh
@@ -40,8 +46,14 @@ o.Mesh:	h.Mesh
 o.Mesh:	h.Math3D
 o.Mesh:	h.CVector
 o.Mesh:	h.CVector
-o.Utils: s.Utils
-o.Utils: h.SWINames
+o.Palette:	c.Palette
+o.Palette:	h.Palette
+o.Palette:	C:h.kernel
+o.Palette:	C:h.swis
+o.Palette:	c.Palette
+o.Palette:	h.Palette
+o.Palette:	C:h.kernel
+o.Palette:	C:h.swis
 o.Main:	c.Main
 o.Main:	C:h.kernel
 o.Main:	C:h.swis
@@ -50,3 +62,13 @@ o.Main:	h.Mesh
 o.Main:	h.Math3D
 o.Main:	h.CVector
 o.Main:	h.CVector
+o.Main:	h.Palette
+o.Main:	c.Main
+o.Main:	C:h.kernel
+o.Main:	C:h.swis
+o.Main:	h.Math3D
+o.Main:	h.Mesh
+o.Main:	h.Math3D
+o.Main:	h.CVector
+o.Main:	h.CVector
+o.Main:	h.Palette
